force-app/main/default/objects/OrderItemSummary/fields/AvailableToFulfillIIncompleteTransferQty__c.field-meta.xml
<CustomField>
    <fullName>AvailableToFulfillIIncompleteTransferQty__c</fullName>
    <formula>QuantityOrdered - QuantityCanceled - QuantityAllocated - IncompleteTransferQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AvailableToFulfillIIncompleteTransferQty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>