force-app/main/default/objects/OrderItemSummary/fields/IncompleteReleaseQuantity__c.field-meta.xml
<CustomField>
    <fullName>IncompleteReleaseQuantity__c</fullName>
    <label>Incomplete Release Quantity</label>
    <summarizedField>OCIInteractionOrderItemSummary__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>OCIInteractionOrderItemSummary__c.Status__c</field>
        <operation>equals</operation>
        <value>REQUESTED</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OCIInteractionOrderItemSummary__c.Type__c</field>
        <operation>equals</operation>
        <value>RELEASE</value>
    </summaryFilterItems>
    <summaryForeignKey>OCIInteractionOrderItemSummary__c.OrderItemSummary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>