force-app/main/default/objects/OrderItemSummary/fields/IncompleteTransferQuantity__c.field-meta.xml
<CustomField>
    <fullName>IncompleteTransferQuantity__c</fullName>
    <label>Incomplete Transfer Quantity</label>
    <summarizedField>OCIInteractionOrderItemSummary__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>OCIInteractionOrderItemSummary__c.Type__c</field>
        <operation>equals</operation>
        <value>TRANSFER_ROUTING</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OCIInteractionOrderItemSummary__c.Status__c</field>
        <operation>equals</operation>
        <value>REQUESTED</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OCIInteractionOrderItemSummary__c.HasNotFulfillmentOrder__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OCIInteractionOrderItemSummary__c.OrderItemSummary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>